--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="frame">
+        <div class="left-section">
+            <img src="images/profile.jpeg">
+            <h2>Contact</h2>
+            <div class="line"></div>
+            <div class="contact">
+
+            </div>
+        </div>
+
+        <div class="right-section"> 
+            <h1 class="name"> Vlad <br/> 
+                <strong>Strelnikov</strong>
+            </h1>
+            <p>developer</p>
+            <div class="profile"></div>
+        </div>
+    </div>
 </body>
 </html>
