add contacts on left-section

--- a/index.html
+++ b/index.html
@@ -14,19 +14,53 @@
     <div class="frame">
         <div class="left-section">
             <img src="images/profile.jpeg">
-            <h2>Contact</h2>
-            <div class="line"></div>
+            <div class="left-content">
             <div class="contact">
-
+                <h2>Contact</h2>
+                <div id="white-object" class="line"></div>
+                <h3>Phone</h3>
+                <a class="links" href="tel:+79099712783">+7 (909) 972 27 83</a>
+                <h3>Email</h3>
+                <cite>
+                    <a class="links" href="mail:vladmuskat@yandex.ru">vladmuskat@yandex.ru</a>
+                </cite>
+                <h3>Addres</h3>
+                <address>
+                    Infinite Loop,<br>
+                    Cupertino, CA<br>
+                    95014, USA
+                  </address>
+            </div>
+            <div class="education">
+                <h2>Education</h2>
+                <div id="white-object" class="line"></div>
+                
+            </div>
+            <div class="language">
+                <h2>Language</h2>
+                <div id="white-object" class="line"></div>
+            </div>
             </div>
         </div>
-
-        <div class="right-section"> 
-            <h1 class="name"> Vlad <br/> 
-                <strong>Strelnikov</strong>
-            </h1>
+        <div class="right-section">
+            <div class="right-content"> 
+            <h1 class="name">Vlad<br/>Strelnikov</h1>
             <p>developer</p>
-            <div class="profile"></div>
+            <div class="profile">
+                <h2>Profile</h2>
+                <div id="black-object" class="line"></div>
+                <p>tekbsfamb</p>
+            </div>
+            <div class="experience">
+                <h2>Experience</h2>
+                <div id="black-object" class="line"></div>
+            </div>
+            <div class="skills">
+                <h2>Skills</h2>
+                <div id="black-object" class="line"></div>
+                <div id="black-object" class="circle"></div>
+            </div>
+            </div>
         </div>
     </div>
 </body>
