--- a/index.html
+++ b/index.html
@@ -15,31 +15,60 @@
         <div class="left-section">
             <img src="images/profile.jpeg">
             <div class="left-content">
-            <div class="contact">
-                <h2>Contact</h2>
-                <div id="white-object" class="line"></div>
-                <h3>Phone</h3>
-                <a class="links" href="tel:+79099712783">+7 (909) 972 27 83</a>
-                <h3>Email</h3>
-                <cite>
-                    <a class="links" href="mail:vladmuskat@yandex.ru">vladmuskat@yandex.ru</a>
-                </cite>
-                <h3>Addres</h3>
-                <address>
-                    Infinite Loop,<br>
-                    Cupertino, CA<br>
-                    95014, USA
-                  </address>
-            </div>
-            <div class="education">
-                <h2>Education</h2>
-                <div id="white-object" class="line"></div>
-                
-            </div>
-            <div class="language">
-                <h2>Language</h2>
-                <div id="white-object" class="line"></div>
-            </div>
+                <div class="contact">
+                    <h2>Contact</h2>
+                    <div id="white-object" class="line"></div>
+                    <h3>Phone</h3>
+                    <a class="links" href="tel:+79099712783">+7 (909) 972 27 83</a>
+                    <h3>Email</h3>
+                    <cite>
+                        <a class="links" href="mailto:vladmuskat@yandex.ru">vladmuskat@yandex.ru</a>
+                    </cite>
+                    <h3>Addres</h3>
+                    <address>
+                        Infinite Loop,<br>
+                        Cupertino, CA<br>
+                        95014, USA
+                    </address>
+                </div>
+                <div class="education">
+                    <h2>Education</h2>
+                    <div id="white-object" class="line"></div>
+                    <p>2014-2016<br>MIIT<br>MIIT</p>
+                    <p>2014-2016<br>MIIT<br>MIIT</p>
+                    <p>2014-2016<br>MIIT<br>MIIT</p>
+                </div>
+                <div class="language">
+                    <h2>Language</h2>
+                    <div id="white-object" class="line"></div>
+                    <div class="language-grid">
+                        <div>Eng</div>
+                        <div class="circles-in-line">
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="language-grid">
+                        <div>Eng</div>
+                        <div class="circles-in-line">
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="language-grid">
+                        <div>Eng</div>
+                        <div class="circles-in-line">
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="right-section">
