finished with left-section

--- a/index.html
+++ b/index.html
@@ -5,42 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="./css/main.css">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet"> -->
 </head>
 <body>
     <div class="frame">
         <div class="left-section">
             <img src="images/profile.jpeg">
             <div class="left-content">
-                <div class="contact">
+                <div class="contact line-height">
                     <h2>Contact</h2>
                     <div id="white-object" class="line"></div>
-                    <h3>Phone</h3>
-                    <a class="links" href="tel:+79099712783">+7 (909) 972 27 83</a>
-                    <h3>Email</h3>
-                    <cite>
-                        <a class="links" href="mailto:vladmuskat@yandex.ru">vladmuskat@yandex.ru</a>
-                    </cite>
-                    <h3>Addres</h3>
-                    <address>
-                        Infinite Loop,<br>
-                        Cupertino, CA<br>
-                        95014, USA
-                    </address>
+                    <div class="content">
+                        <h3>Phone</h3>
+                        <a class="links" href="tel:+79099712783">+7 (909) 972 27 83</a>
+                    </div>
+                    <div class="content">
+                        <h3>Email</h3>
+                        <cite>
+                            <a class="links" href="mailto:vladmuskat@yandex.ru">vladmuskat@yandex.ru</a>
+                        </cite>
+                    </div>
+                    <div class="content">  
+                        <h3>Addres</h3>
+                        <address>
+                            Infinite Loop,<br>
+                            Cupertino, CA<br>
+                            95014, USA
+                        </address>
+                        </div>
                 </div>
-                <div class="education">
+                <div class="education line-height">
                     <h2>Education</h2>
                     <div id="white-object" class="line"></div>
-                    <p>2014-2016<br>MIIT<br>MIIT</p>
-                    <p>2014-2016<br>MIIT<br>MIIT</p>
-                    <p>2014-2016<br>MIIT<br>MIIT</p>
+                    <div class="content"> 
+                        <p>2014-2016<br>MIIT<br>MIIT</p>
+                    </div>
+                    <div class="content">     
+                        <p>2014-2016<br>MIIT<br>MIIT</p>
+                    </div>
+                    <div class="content"> 
+                        <p>2014-2016<br>MIIT<br>MIIT</p>
+                    </div>
                 </div>
                 <div class="language">
                     <h2>Language</h2>
                     <div id="white-object" class="line"></div>
+                    <div class="content"> 
+                    <div class="language-grid">
+                        <div>Eng</div>
+                        <div class="circles-in-line">
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="white-object" class="circle"></div>
+                            <div id="transparent-object" class="circle"></div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="content"> 
                     <div class="language-grid">
                         <div>Eng</div>
                         <div class="circles-in-line">
@@ -50,6 +73,8 @@
                             <div id="white-object" class="circle"></div>
                         </div>
                     </div>
+                    </div>
+                    <div class="content"> 
                     <div class="language-grid">
                         <div>Eng</div>
                         <div class="circles-in-line">
@@ -59,14 +84,6 @@
                             <div id="white-object" class="circle"></div>
                         </div>
                     </div>
-                    <div class="language-grid">
-                        <div>Eng</div>
-                        <div class="circles-in-line">
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                        </div>
                     </div>
                 </div>
             </div>
