worked with right-section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="left-section">
             <img src="images/profile.jpeg">
             <div class="left-content">
-                <div class="contact line-height">
+                <div class="contact">
                     <h2>Contact</h2>
                     <div id="white-object" class="line"></div>
                     <div class="content">
@@ -34,9 +34,9 @@
                             Cupertino, CA<br>
                             95014, USA
                         </address>
-                        </div>
+                    </div>
                 </div>
-                <div class="education line-height">
+                <div class="education">
                     <h2>Education</h2>
                     <div id="white-object" class="line"></div>
                     <div class="content"> 
@@ -53,59 +53,87 @@
                     <h2>Language</h2>
                     <div id="white-object" class="line"></div>
                     <div class="content"> 
-                    <div class="language-grid">
-                        <div>Eng</div>
-                        <div class="circles-in-line">
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="transparent-object" class="circle"></div>
+                        <div class="content-grid">
+                            <div>Eng</div>
+                            <div class="circles-in-line">
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                                <div id="transparent-object" class="circle"></div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="content"> 
-                    <div class="language-grid">
-                        <div>Eng</div>
-                        <div class="circles-in-line">
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
+                        <div class="content-grid">
+                            <div>Eng</div>
+                            <div class="circles-in-line">
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="content"> 
-                    <div class="language-grid">
-                        <div>Eng</div>
-                        <div class="circles-in-line">
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
-                            <div id="white-object" class="circle"></div>
+                        <div class="content-grid">
+                            <div>Engll</div>
+                            <div class="circles-in-line">
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                                <div id="white-object" class="circle"></div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="right-section">
             <div class="right-content"> 
-            <h1 class="name">Vlad<br/>Strelnikov</h1>
-            <p>developer</p>
-            <div class="profile">
-                <h2>Profile</h2>
-                <div id="black-object" class="line"></div>
-                <p>tekbsfamb</p>
-            </div>
-            <div class="experience">
-                <h2>Experience</h2>
-                <div id="black-object" class="line"></div>
-            </div>
-            <div class="skills">
-                <h2>Skills</h2>
-                <div id="black-object" class="line"></div>
-                <div id="black-object" class="circle"></div>
-            </div>
+                <div class="name">
+                    <h1>Vladislav<br/>Strelnikov</h1>
+                    <p>developer</p>
+                </div>
+                <div class="profile">
+                    <h2>Profile</h2>
+                    <div id="black-object" class="line"></div>
+                    <div class="content"> 
+                    <p>tekbsfamb</p>
+                    </div>
+                </div>
+                <div class="experience">
+                    <h2>Experience</h2>
+                    <div id="black-object" class="line"></div>
+                    <div class="content content-grid">
+                        <div class="content company">2022-2023<br>Company</div>
+                        <div class="content experience-in-company"> 
+                            <div class="post-in-company">
+                                Designer
+                            </div>lorem
+                        </div>
+                    </div>
+                    <div class="content content-grid">
+                        <div class="content company">2022-2023<br>Company dfdfdfdfdffd</div>
+                        <div class="content experience-in-company"> 
+                            <div class="post-in-company">
+                                Designer
+                            </div>lorem
+                        </div>
+                    </div>
+                    <div class="content content-grid">
+                        <div class="content company">2022-2023<br>Company</div>
+                        <div class="content experience-in-company"> 
+                            <div class="post-in-company">
+                                Designer
+                            </div>lorem
+                        </div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <h2>Skills</h2>
+                    <div id="black-object" class="line"></div>
+                    <div id="black-object" class="circle"></div>
+                </div>
             </div>
         </div>
     </div>
