--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="./css/main.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="frame">
@@ -15,8 +15,10 @@
             <img src="images/profile.jpeg">
             <div class="left-content">
                 <div class="contact">
-                    <h2>Contact</h2>
-                    <div id="white-object" class="line"></div>
+                    <div class="headings">
+                        <h2>Contact</h2>
+                        <div id="white-object" class="line"></div>
+                    </div>
                     <div class="content">
                         <h3>Phone</h3>
                         <a class="links" href="tel:+79099712783">+7 (909) 972 27 83</a>
@@ -24,37 +26,43 @@
                     <div class="content">
                         <h3>Email</h3>
                         <cite>
-                            <a class="links" href="mailto:vladmuskat@yandex.ru">vladmuskat@yandex.ru</a>
+                            <a class="links" href="mailto:vladmuskat@yandex.ru">VIStrelnikov94@yandex.ru</a>
                         </cite>
                     </div>
                     <div class="content">  
                         <h3>Addres</h3>
                         <address>
-                            Infinite Loop,<br>
-                            Cupertino, CA<br>
-                            95014, USA
+                            Russia Moscow,<br>
+                            Central
                         </address>
                     </div>
                 </div>
                 <div class="education">
-                    <h2>Education</h2>
-                    <div id="white-object" class="line"></div>
+                    <div class="headings">
+                        <h2>Education</h2>
+                        <div id="white-object" class="line"></div>
+                    </div>
                     <div class="content"> 
-                        <p>2014-2016<br>MIIT<br>MIIT</p>
+                        <p>2022-2023<br>.Net developer<br>MAKE YOU PRO</p>
+                    </div>
+                    <div class="content"> 
+                        <p>2020-2021<br>Data science<br>YandexPracticum</p>
                     </div>
                     <div class="content">     
-                        <p>2014-2016<br>MIIT<br>MIIT</p>
+                        <p>2017-2018<br>Project management<br>Moscow City University of Management</p>
                     </div>
                     <div class="content"> 
-                        <p>2014-2016<br>MIIT<br>MIIT</p>
+                        <p>2012-2017<br>Bridge design <br>Russian University of Transport</p>
                     </div>
                 </div>
                 <div class="language">
-                    <h2>Language</h2>
-                    <div id="white-object" class="line"></div>
+                    <div class="headings">
+                        <h2>Language</h2>
+                        <div id="white-object" class="line"></div>
+                    </div>
                     <div class="content"> 
                         <div class="content-grid">
-                            <div>Eng</div>
+                            <div>English</div>
                             <div class="circles-in-line">
                                 <div id="white-object" class="circle"></div>
                                 <div id="white-object" class="circle"></div>
@@ -65,23 +73,23 @@
                     </div>
                     <div class="content"> 
                         <div class="content-grid">
-                            <div>Eng</div>
+                            <div>German</div>
                             <div class="circles-in-line">
                                 <div id="white-object" class="circle"></div>
                                 <div id="white-object" class="circle"></div>
-                                <div id="white-object" class="circle"></div>
-                                <div id="white-object" class="circle"></div>
+                                <div id="transparent-object" class="circle"></div>
+                                <div id="transparent-object" class="circle"></div>
                             </div>
                         </div>
                     </div>
                     <div class="content"> 
                         <div class="content-grid">
-                            <div>Engll</div>
+                            <div>Spanish</div>
                             <div class="circles-in-line">
                                 <div id="white-object" class="circle"></div>
-                                <div id="white-object" class="circle"></div>
-                                <div id="white-object" class="circle"></div>
-                                <div id="white-object" class="circle"></div>
+                                <div id="transparent-object" class="circle"></div>
+                                <div id="transparent-object" class="circle"></div>
+                                <div id="transparent-object" class="circle"></div>
                             </div>
                         </div>
                     </div>
@@ -89,50 +97,136 @@
             </div>
         </div>
         <div class="right-section">
-            <div class="right-content"> 
+            <div class="right-content">
                 <div class="name">
                     <h1>Vladislav<br/>Strelnikov</h1>
-                    <p>developer</p>
+                    <div class="profession">developer</div>
                 </div>
                 <div class="profile">
-                    <h2>Profile</h2>
-                    <div id="black-object" class="line"></div>
+                    <div class="headings">
+                        <h2>Profile</h2>
+                        <div id="black-object" class="line"></div>
+                    </div>
                     <div class="content"> 
-                    <p>tekbsfamb</p>
+                    <p>I have experience development for projects with C#. My skills include web development, software development, and database management. I'm passionate about delivering quality products that meet the needs of my clients. I'm looking for an opportunity to gain more experience in the field of .NET development and work with a dynamic team that values innovation and collaboration. Highly motivated and
+                        well-disciplined individual, auto-deduct.</p>
                     </div>
                 </div>
                 <div class="experience">
-                    <h2>Experience</h2>
-                    <div id="black-object" class="line"></div>
+                    <div class="headings">
+                        <h2>Experience</h2>
+                        <div id="black-object" class="line"></div>
+                    </div>
                     <div class="content content-grid">
-                        <div class="content company">2022-2023<br>Company</div>
+                        <div class="content company">2022-2023<br>MAKE YOU PRO</div>
                         <div class="content experience-in-company"> 
                             <div class="post-in-company">
-                                Designer
-                            </div>lorem
+                                <strong>C# Developer</strong>
+                            </div>Development of backend for CRM system using c# (.Net Framework, .Net 7) Development of Web API services. Blazer, Entity Framework, Swagger, and MS SQL, Postgresql, ElasticSearch, RabbitMQ.
                         </div>
                     </div>
                     <div class="content content-grid">
-                        <div class="content company">2022-2023<br>Company dfdfdfdfdffd</div>
+                        <div class="content company">2021-2022<br>BearingPoint</div>
                         <div class="content experience-in-company"> 
                             <div class="post-in-company">
-                                Designer
-                            </div>lorem
-                        </div>
-                    </div>
-                    <div class="content content-grid">
-                        <div class="content company">2022-2023<br>Company</div>
-                        <div class="content experience-in-company"> 
-                            <div class="post-in-company">
-                                Designer
-                            </div>lorem
+                                <strong>Business analyst</strong>
+                            </div>EWM integration, consulting, business process model construction, coordination of design solutions.
                         </div>
                     </div>
                 </div>
                 <div class="skills">
-                    <h2>Skills</h2>
-                    <div id="black-object" class="line"></div>
-                    <div id="black-object" class="circle"></div>
+                    <div class="headings">
+                        <h2>Skills</h2>
+                        <div id="black-object" class="line"></div>
+                    </div>
+                    <div class="content"> 
+                        <div class="content-grid">
+                            <div class="content-grid">
+                                <div>C#</div>
+                                <div class="circles-in-line">
+                                    <div id="black-object" class="circle"></div>
+                                    <div id="black-object" class="circle"></div>
+                                    <div id="black-object" class="circle"></div>
+                                    <div id="transparent-object" class="circle"></div>
+                                </div>
+                            </div>
+                            <div class="content-grid">
+                                <div>SQL</div>
+                                <div class="circles-in-line">
+                                    <div id="black-object" class="circle"></div>
+                                    <div id="black-object" class="circle"></div>
+                                    <div id="transparent-object" class="circle"></div>
+                                    <div id="transparent-object" class="circle"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content"> 
+                            <div class="content-grid">
+                                <div class="content-grid">
+                                    <div>React</div>
+                                    <div class="circles-in-line">
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                    </div>
+                                </div>
+                                <div class="content-grid">
+                                    <div>JavaScript</div>
+                                    <div class="circles-in-line">
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content"> 
+                            <div class="content-grid">
+                                <div class="content-grid">
+                                    <div>Python</div>
+                                    <div class="circles-in-line">
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                    </div>
+                                </div>
+                                <div class="content-grid">
+                                    <div>Swift</div>
+                                    <div class="circles-in-line">
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content"> 
+                            <div class="content-grid">
+                                <div class="content-grid">
+                                    <div>Rust</div>
+                                    <div class="circles-in-line">
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                    </div>
+                                </div>
+                                <div class="content-grid">
+                                    <div>GO</div>
+                                    <div class="circles-in-line">
+                                        <div id="black-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                        <div id="transparent-object" class="circle"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
