--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="details">
             <img src="images/in.svg" />
-            <a class="links" href="www.linkedin.com/in/vladislavstr3"
+            <a class="links" href="https://www.linkedin.com/in/vladislavstr/"
               >linkedin.com/in/vladislavstr</a
             >
           </div>
