--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="details">
             <img src="images/at.svg" />
             <cite>
-              <a class="links" href="mailto:vladmuskat@yandex.ru"
+              <a class="links" href="mailto:VIStrelnikov94@yandex.ru"
                 >VIStrelnikov94@yandex.ru</a
               >
             </cite>
