debugged importing of images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vladislavstr/CV</title>
+    <title>vladislavstr-CV</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,19 +16,19 @@
     <div class="frame">
       <div class="upper-part">
         <div class="profile-img">
-          <img src="images/profile-2.jpg" />
+          <img src="./Images/profile-2.jpg" />
         </div>
         <div class="contacts">
           <div class="details">
-            <img src="images/ph.svg" />
+            <img src="./Images/ph.svg" />
             <a class="links" href="tel:+79099712783">+7 (909) 971 27 83</a>
           </div>
           <div class="details">
-            <img src="images/tg.svg" />
+            <img src="./Images/tg.svg" />
             <a class="links" href="https://t.me/nutmeg_v">@nutmeg_v</a>
           </div>
           <div class="details">
-            <img src="images/at.svg" />
+            <img src="./Images/at.svg" />
             <cite>
               <a class="links" href="mailto:VIStrelnikov94@yandex.ru"
                 >VIStrelnikov94@yandex.ru</a
@@ -36,19 +36,19 @@
             </cite>
           </div>
           <div class="details">
-            <img src="images/goo.svg" />
+            <img src="./Images/goo.svg" />
             <a class="links" href="https://yandex.ru/maps/-/CDUFV2Li"
               >г. Москва</a
             >
           </div>
           <div class="details">
-            <img src="images/gh.svg" />
+            <img src="./Images/gh.svg" />
             <a class="links" href="https://github.com/vladislavstr"
               >github.com/vladislavstr</a
             >
           </div>
           <div class="details">
-            <img src="images/in.svg" />
+            <img src="./Images/in.svg" />
             <a class="links" href="https://www.linkedin.com/in/vladislavstr/"
               >linkedin.com/in/vladislavstr</a
             >
@@ -143,7 +143,7 @@
         </div>
       </div>
       <div class="footer">
-        <img src="images/dots_wave.svg" />
+        <img src="./Images/dots_wave.svg" />
       </div>
     </div>
   </body>
